--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/AppianZ/calendar.git"
   },
-  "author": "",
+  "author": "appian",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AppianZ/calendar/issues"
